Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127348

Crash in widgetgraphgallery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8.0 Beta2
    • Graphs: 3D
    • None
    • 642d64d81 (dev), e5afe0447 (6.8)

      Steps to reproduce in widgetgraphgallery > Bar Graph:

      • click Custom Proxy Data
      • Change selection mode to Slice Into Row
      • click any bar

      -> crash

       

        For Gerrit Dashboard: QTBUG-127348
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes