Remove series from slice bars when removed

When a series was removed, it remained in the slice
bar model hash. This caused a wrong series to be found
when going into slice view, if a new series was added and
old one(s) removed.

Pick-to: 6.8
Fixes: QTBUG-127348
Change-Id: I7349588060b9d0fb76382e735a8d852071b22981
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>